# kraken-spot

./: .editorconfig  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
docs/: RELEASE.md
examples/: otp.py  simple.py
kraken_spot/: __init__.py  auth.py  client.py  http.py  private.py  public.py
tests/: test_auth.py  test_client.py  test_example.py  test_http.py  test_private.py  test_public.py
